# black-ox

./: HISTORY.md  mkdocs.yml  pyproject.toml
docs/: getting-started.md
src/black_ox/: black_ox.py
src/black_ox/config/: config.yml
